Update 1. Ros noetic set up.md

--- a/Xavier_setting/1. Ros noetic set up.md
+++ b/Xavier_setting/1. Ros noetic set up.md
@@ -15,6 +15,10 @@ Ros noetic setting up
 + Jetpack 설치 이후 개발 환경을 만들어 줌
 
 ### 1. Setup your sources.list
+
+#### > Why noetic? 
+- SDK manager을 통해 Jetpack 설치 후, 부팅을 하면 자동적으로 Ubuntu 20.04LTS 
+
 ```
 sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
 ```
