--- a/Xavier_setting/6. OpenCV.md
+++ b/Xavier_setting/6. OpenCV.md
@@ -61,6 +61,20 @@ sudo make install
 cat /etc/ld.so.conf.d/* 
 ```
 
+#### > Library
+- Library : 특정한 코드(함수 혹은 클래스)를 포함하고 있는 컴파일 된 파일
+  - Compile : 사람이 이해하는 언어를 컴퓨터가 이해할 수 있는 언어로 바꾸어 주는 과정으로 A라는 문자를 0101 로 해석한 것
+- 왜 라이브러리를 사용하나 ? 자주 사용하는 특정한 기능을 main 함수에서 분리시켜 놓음으로써 프로그램을 유지, 디버깅을 쉽게하고 컴파일 시간을 좀 더 빠르게 할 수 있음
+- 공유 라이브러리의 기본 구성 파일 
+```
+/etc/ld.so.conf 
+```
+- 위와 같은 디렉토리 내에 *.conf 파일 형식으로 존재
+
+#### > Cat
+- cat : cat명령어는 concatenate에서 따온 명칭으로 그 이름에서 유추할 수 있듯 본래의 기능은 여러 파일의 내용을 하나로 합쳐주는 역할
+- cat 명령어는 단순히 파일을 합치는 것에만 사용되는 것은 아니고 파일의 내용을 단순 출력하여 확인하거나, >이나 >>와 같은 리다이렉션 기호와 함께 사용하여 파일을 생성하고, 저장하는 용도로도 사용
+
 ### 4. Check OpenCV
 ```
 python
