--- a/Xavier_setting/2. Mavros.md
+++ b/Xavier_setting/2. Mavros.md
@@ -70,6 +70,9 @@ rosdep install --from-paths src --ignore-src -y
   sudo ./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
   ```
 
+#### > GeographicLib
+- Linux에서 g++ 컴파일러로 g++컴파일러란 c++언어를 위한 컴파일러러
+
 ### 7. Build source
 ```
 catkin build
