--- a/Xavier_setting/2. Mavros.md
+++ b/Xavier_setting/2. Mavros.md
@@ -18,7 +18,7 @@ cd ~/catkin_ws
 catkin init ; cmakelist를 초기화 시켜서 다시 전체 build하기 위함
 wstool init src
 ```
-  + catkin init 오류
+  + Trouble Shooting : catkin init
   ```
   catkin: command not found
   ```
@@ -61,7 +61,7 @@ rosdep install --from-paths src --ignore-src -y
 ```
 ./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
 ```
-  + 오류 발생
+  + Trouble Shooting
   ```
   This script require root privileges!
   ```
@@ -96,7 +96,7 @@ source devel/setup.bash
 ```
 roslaunch mavros apm.launch
 ```
-+ 오류 발생
++ Trouble Shooting
 ```
 [FATAL] [1626267950.410009640]: FCU: DeviceError:udp:bind: Cannot assign requested address
 ```
