--- a/Xavier_setting/0. Install Xavier & SSD.md
+++ b/Xavier_setting/0. Install Xavier & SSD.md
@@ -2,10 +2,22 @@
 ---
 
 ### Xavier OS install with SDK Manager
+
++ Jetson Xavier에 SDK Manager를 통한 Jetpack5.0.1 설치
+  + 왜? Xavier에 처음 깔려있는 Ubuntu에는 개발환경이 설정되어있지 않기 때문에 Jetpack을 통해 환경설정에 필요한(드라이버, 툴, 라이브러리 등등) 파일을 다운로드 및 설치 진행 가능
+    + Jetson OS
+    + CUDA
+    - cuDNN
+    - OpenCV
+
+![Jan2021-developer-sdkm-landing-page-web-diagram](https://user-images.githubusercontent.com/108650199/178133475-55b2ba45-91ba-436f-bd93-5330c9103bd3.jpg)
++ Jetpack 설치 이후 개발 환경을 만들어 줌
+
 1) Install SDK Manager(1.8) on Host(Ubuntu) PC 
 ![image](https://user-images.githubusercontent.com/79160507/178177881-d2d78b1d-b81a-4033-b03c-68830eb27fdf.png)
     - DownloadLink : [NVIDIA SDK Manager](https://developer.nvidia.com/nvidia-sdk-manager)
     - Need Nvidia deloper account
+    
 
 2) Run SDK Manager on Host PC and connect Host PC with Xavier, 
 ![image](https://user-images.githubusercontent.com/79160507/178177977-075d5919-0a22-46d0-83c5-38ad9a1ba631.png)
