Update 1. Ros noetic set up.md

--- a/Xavier_setting/1. Ros noetic set up.md
+++ b/Xavier_setting/1. Ros noetic set up.md
@@ -34,17 +34,12 @@ sudo apt update
 sudo apt install ros-noetic-desktop-full
 ```
 
-### 4. Install a specific package
+### 3-1. Install a specific package (Option)
 ```
 sudo apt install ros-noetic-PACKAGE
 ```
 
-### 5. Find available packages
-```
-apt search ros-noetic
-```
-
-### 6. Environment setup
+### 4. Environment setup
 ```
 source /opt/ros/noetic/setup.bash
 echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
@@ -83,7 +78,7 @@ source ~/catkin_ws/devel/setup.bash
 ```
 - 나의 workspace를 ROS환경에 추가하려면 생성된 setup.bash 를 적용 즉, catkin build / make 후 수정된 사항을 적용해주기 위해 사용
 
-### 7. Dependencies for building packages
+### 5. Dependencies for building packages
 ```
 sudo apt install python3-rosdep python3-rosinstall python3-rosinstall-generator python3-wstool build-essential
 ```
@@ -91,7 +86,7 @@ sudo apt install python3-rosdep python3-rosinstall python3-rosinstall-generator 
 - ROS 개발시 여러가지 패키지를 사용해야하며 오픈소스로 공개되어있는 패키지를 받아 빌드하여 사용해야하는 경우가 생김
 - 이 때, 빌드하려는 패키지가 사용하는 의존 패키지를 설치해야 빌드 가능
 
-### 8. Initialize rosdep
+### 6. Initialize rosdep
 ```
 sudo apt install python3-rosdep
 sudo rosdep init
@@ -116,7 +111,6 @@ export CUDA_HOME=/usr/local/cuda
 export PATH=/usr/local/cuda/bin${PATH:+:${PATH}}
 export LD_LIBRARY_PATH=/usr/local/cuda/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
 ```
-
 
 
 > Korean keyboard
