--- a/Xavier_setting/1. Ros noetic set up.md
+++ b/Xavier_setting/1. Ros noetic set up.md
@@ -92,6 +92,25 @@ sudo apt install python3-rosdep
 sudo rosdep init
 rosdep update
 ```
+### 7. Create ros workspace
+```
+$ mkdir -p ~/catkin_ws/src
+$ cd ~/catkin_ws
+$ catkin_make or catkin build (Recommend catkin build)
+```
+### 8. Source workspace package
+```
+in directory :d $ /home/usr/catkin_ws
+$ source devel/setup.bash
+```
+### 9. Edit bashrc
+```
+$ sudo gedit ~/.bashrc (gedit, nano, vim, vi, ... any editor)
+Add two lines in bashrc and save
+source /opt/ros/noetic/setup.bash
+source /home/jh/catkin_ws/devel/setup.bash
+```
+---
 
 > Alias Setting Up
 ```
