--- a/Xavier_setting/2. Mavros.md
+++ b/Xavier_setting/2. Mavros.md
@@ -11,86 +11,54 @@ Mavros Setting Up
   
   ![ArduPilot_HighLevelArchecture](https://user-images.githubusercontent.com/108650199/178135862-77c91ac7-af26-43f7-8c6b-3512e88253f4.png)
 
-### 1. Source Installation
+### 1. install catkin-tools
 ```
-mkdir -p ~/catkin_ws/src
-cd ~/catkin_ws
-catkin init ; cmakelist를 초기화 시켜서 다시 전체 build하기 위함
-wstool init src
+$ sudo apt install python3-catkin-tools python3-rosinstall-generator python3-osrf-pycommon -y
 ```
-  + Trouble Shooting : catkin init
-  ```
-  catkin: command not found
-  ```
-  + 해결
-  ```
-  sudo apt-get install python3-catkin-tools
-  ```
+
+### 2. in directory : /home/usr/catkin_ws/
+```
+$ catkin init
+$ wstool init src
+```
+
 #### > wstool
 - Wstool : 소스 코드 작업 공간 관리를 위한 도구로 catkin workspace를 위해 rosws tool을 대체
 
-### 2. Install ROS Python tools
+### 3. install MAVLInk
 ```
-sudo apt-get install python3-catkin-tools python3-rosinstall-generator -y
-```
-+ ROS noetic use python3
-
-### 3. Initialize source space
-```
-wstool init ~/catkin_ws/src
+$ rosinstall_generator --rosdistro noetic mavlink | tee /tmp/mavros.rosinstall
 ```
 
-### 4. Install MAVLink using either released version
-> We use the Noetic reference for all ROS distros as it's not distro-specific and up to date
+### 4. get source
 ```
-rosinstall_generator --rosdistro noetic mavlink | tee /tmp/mavros.rosinstall
-rosinstall_generator --upstream mavros | tee -a /tmp/mavros.rosinstall
+$ rosinstall_generator --upstream mavros | tee -a /tmp/mavros.rosinstall
 ```
-
-### 5. Create workspace & deps
+### 5. create workspace & deps
 ```
-wstool merge -t src /tmp/mavros.rosinstall
-wstool update -t src -j4
-rosdep install --from-paths src --ignore-src -y
+$ wstool merge -t src /tmp/mavros.rosinstall
+$ wstool update -t src -j4
+$rosdep install --from-paths src --ignore-src -y
 ```
-#### > rosdep install
-- build시 오류가 많이 나면 일일이 고치기 힘들다
-- 따라서 rosdep install시 src의 package dependencies 알아서 깔아준다
-
-### 6. Install GeographicLib datasets
+### 6. install geographic lib datasets
 ```
-./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
+$  ./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
 ```
-  + Trouble Shooting
-  ```
-  This script require root privileges!
-  ```
-  + 해결
-  ```
-  sudo ./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
-  ```
-
 #### > GeographicLib
 - Linux에서 g++ 컴파일러로 g++컴파일러란 c++언어를 위한 컴파일러러
 
-### 7. Build source
+### 7. build & source
 ```
-catkin build
+$ catkin build
+$ source devel/setup.bash
 ```
-
-#### > Catkin build vs Catkin make
+        reference : https://docs.px4.io/main/ko/ros/mavros_installation.html
+        
+        #### > Catkin build vs Catkin make
 - Catkin build : 빌드시 혼선을 방지하기 위해 다른 작업 공간의 소스 공간에 각 패키지를 빌드
   - Catkin build는 catkin_make_isloation의 병렬 버전과 비슷
   - 작업 공간의 모든 디렉토리에서 사용할 수 있음
 - Catkin make : 최상위 디렉토리에서만 작동
-
-### 8. Setup.bash
-> Needed or rosrun can't find nodes from this workspace.
-```
-source devel/setup.bash
-```
-- ./bashrc에 적어놨기 때문에 안해도 됨
-
 ---------
 ### Launch
 ```
