--- a/Xavier_setting/2. Mavros.md
+++ b/Xavier_setting/2. Mavros.md
@@ -10,7 +10,7 @@ Mavros Setting Up
   ```
   
   ![ArduPilot_HighLevelArchecture](https://user-images.githubusercontent.com/108650199/178135862-77c91ac7-af26-43f7-8c6b-3512e88253f4.png)
-
+---
 ### 1. install catkin-tools
 ```
 $ sudo apt install python3-catkin-tools python3-rosinstall-generator python3-osrf-pycommon -y
@@ -40,10 +40,12 @@ $ wstool merge -t src /tmp/mavros.rosinstall
 $ wstool update -t src -j4
 $rosdep install --from-paths src --ignore-src -y
 ```
+
 ### 6. install geographic lib datasets
 ```
-$  ./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
+$  sudo ./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
 ```
+
 #### > GeographicLib
 - Linux에서 g++ 컴파일러로 g++컴파일러란 c++언어를 위한 컴파일러러
 
@@ -51,15 +53,17 @@ $  ./src/mavros/mavros/scripts/install_geographiclib_datasets.sh
 ```
 $ catkin build
 $ source devel/setup.bash
-```
-        reference : https://docs.px4.io/main/ko/ros/mavros_installation.html
-        
-        #### > Catkin build vs Catkin make
+```       
+      
+#### > Catkin build vs Catkin make
 - Catkin build : 빌드시 혼선을 방지하기 위해 다른 작업 공간의 소스 공간에 각 패키지를 빌드
   - Catkin build는 catkin_make_isloation의 병렬 버전과 비슷
   - 작업 공간의 모든 디렉토리에서 사용할 수 있음
 - Catkin make : 최상위 디렉토리에서만 작동
----------
+
+- reference : https://docs.px4.io/main/ko/ros/mavros_installation.html
+
+---
 ### Launch
 ```
 roslaunch mavros apm.launch
