Update 1. SSD mount & boot.md

--- a/Xavier_setting/1. SSD mount & boot.md
+++ b/Xavier_setting/1. SSD mount & boot.md
@@ -33,6 +33,6 @@ $ ./copy-rootfs-ssd.sh
 ### 6. Enable boot from SSD
 ```
 $ ./setup-service.sh
-reboot
+$ reboot
 ```
 ![ssd](https://user-images.githubusercontent.com/108650199/177741278-24d917dc-65c9-4d3b-9b93-f8b768ae3328.png)
