Update 5. Auto start.md

--- a/Xavier_setting/5. Auto start.md
+++ b/Xavier_setting/5. Auto start.md
@@ -2,13 +2,19 @@ Auto Start Setting up
 ===
 
 > Method
-+ Crontap, rc.local, bashrc, init.d, systemd
+- Crontap
+- rc.local
+- bashrc
+- init.d
+- systemd
+- Startup Applications Preferences(not root, run in usr permission)
+- xdotool (autorun visualization with GUI)
 
 ### 1. rc.local Setting up
 + rc.local is the first file to be executed after booting
 ```
-cd /etc
-sudo gedit rc.local
+$ cd /etc
+$ sudo gedit rc.local
 ```
 - 추가
 ```
@@ -26,12 +32,12 @@ exit 0
 
 ### 2. Permission
 ```
-sudo chmod +x rc.local
+$ sudo chmod +x rc.local
 ```
 #### > chmod
 > Reference : https://ko.wikipedia.org/wiki/Chmod
 ```
-chmod [references][operator][modes] file1 ...
+$ chmod [references][operator][modes] file1 ...
 ```
 
 - References : '모든 것'이 기본값
@@ -54,8 +60,8 @@ chmod [references][operator][modes] file1 ...
 
 ### 3. Execute service 
 ```
-cd /lib/systemd/system/
-sudo gedit rc-local.service
+$ cd /lib/systemd/system/
+$ sudo gedit rc-local.service
 ```
 + Write this at the bottom (because of service registration)
 ```
@@ -69,9 +75,9 @@ WantedBy=multi-user.target
 
 ### 3. Active service
 ```
-sudo systemctl enable rc-local.service
-sudo systemctl start rc-local.service
-sudo systemctl status rc-local.service
+$ sudo systemctl enable rc-local.service
+$ sudo systemctl start rc-local.service
+$ sudo systemctl status rc-local.service
 
 reboot
 ```
@@ -79,7 +85,7 @@ reboot
 #### > Systemctl
 - Systemctl : service 제어시 systemctl 구문으로 제어
 ```
-systemctl 옵션 서비스명.service~
+$ systemctl 옵션 서비스명.service~
 ```
 
 ![Auto start](https://user-images.githubusercontent.com/108650199/177737731-3958843b-456c-4ce2-8467-fdb59a9e2cf3.png)
