Update 5. Auto start.md

--- a/Xavier_setting/5. Auto start.md
+++ b/Xavier_setting/5. Auto start.md
@@ -58,7 +58,7 @@ $ chmod [references][operator][modes] file1 ...
 
 
 
-### 3. Execute service 
+### 3-1. Execute service 
 ```
 $ cd /lib/systemd/system/
 $ sudo gedit rc-local.service
@@ -73,7 +73,7 @@ WantedBy=multi-user.target
 - 서비스를 등록/해제(enable/disable)할 때 사용하는 설정값
 - WantedBy는 해당 서비스가 활성화되어 있어야 본 서비스를 활성화 할 수 있음
 
-### 3. Active service
+### 3-2. Active service
 ```
 $ sudo systemctl enable rc-local.service
 $ sudo systemctl start rc-local.service
@@ -93,3 +93,13 @@ $ systemctl 옵션 서비스명.service~
 - reboot시 확인
 
 ![auto start list](https://user-images.githubusercontent.com/108650199/178170598-097ecde3-97fa-4d10-8e2f-c7dd0cb4ca0e.png)
+
+##### +) rc.local, service trouble shooting
+if rc-local.service doesn't get active, edit the rc.local in /etc and restart rc-local.service
+```
+1) edit rc.local
+2) $ sudo systemctl stop rc-local.service
+3) $ sudo systemctl daemon-reload
+4) $ sudo systemctl start rc-local.service
+5) $ sudo systemctl status rc-local.service
+```
