--- a/Xavier_setting/9. LiDAR.md
+++ b/Xavier_setting/9. LiDAR.md
@@ -24,8 +24,7 @@ sudo route add 192.168.XX.YY eth0
 ### 2. Checking the configurations
 IP address : 192.168.1.201
 ![Velodyne setting_1](https://user-images.githubusercontent.com/108650199/177729021-f847247b-333f-41b0-85b7-07f387891ff1.png)
-![Velodyne setting_2](https://user-images.githubusercontent.com/108650199/177729032-7e52cdf1-0852-4d38-b6b2-af4ac3b2f363.png)
-![Velodyne setting_3](https://user-images.githubusercontent.com/108650199/177729035-57a3e8d2-b8c9-4465-8a90-2c52330ffbfd.png)
+
 Check my data port number
 
 ### 3. Install ROS dependencies / Binary ver
@@ -48,5 +47,5 @@ rosnode list
 rostopic echo /velodyne_points
 rosrun rviz rviz -f velodyne
 ```
+![lidar_running](https://user-images.githubusercontent.com/79160507/178195759-e6112397-7502-4190-8d38-00623af905f1.gif)
 
-![Velodyne point cloud](https://user-images.githubusercontent.com/108650199/177729499-fef50eeb-051c-4876-aee7-8a98de6c1700.png)
