--- a/Xavier_setting/9. LiDAR.md
+++ b/Xavier_setting/9. LiDAR.md
@@ -16,8 +16,8 @@ If you have done this process, you do not need to connect through terminal
 
 + Terminal
 ```
-sudo ifconfig eth0 192.168.3.100
-sudo route add 192.168.XX.YY eth0
+$ sudo ifconfig eth0 192.168.3.100
+$ sudo route add 192.168.XX.YY eth0
 ```
 + XX.YY is LiDAR's IP address 
 
@@ -29,23 +29,23 @@ Check my data port number
 
 ### 3. Install ROS dependencies / Binary ver
 ```
-sudo apt-get install ros-VERSION-velodyne
+$ sudo apt-get install ros-VERSION-velodyne
 ```
 
 ### 4. Install the VLP16 driver / Source ver
 ```
-cd ~/catkin_ws/src/ && git clone https://github.com/ros-drivers/velodyne.git
-rosdep install --from-paths src --ignore-src --rosdistro YOURDISTRO -y
-cw
-catkin build
+$ cd ~/catkin_ws/src/ && git clone https://github.com/ros-drivers/velodyne.git
+$ rosdep install --from-paths src --ignore-src --rosdistro YOURDISTRO -y
+$ cw
+$ catkin build
 ```
 
 ### 5. Viewing the Data
 ```
-roslaunch velodyne_pointcloud VLP16_points.launch
-rosnode list
-rostopic echo /velodyne_points
-rosrun rviz rviz -f velodyne
+$ roslaunch velodyne_pointcloud VLP16_points.launch
+$ rosnode list
+$ rostopic echo /velodyne_points
+$ rosrun rviz rviz -f velodyne
 ```
 ![lidar_running](https://user-images.githubusercontent.com/79160507/178195759-e6112397-7502-4190-8d38-00623af905f1.gif)
 
