Update 1. SSD mount & boot.md

--- a/Xavier_setting/1. SSD mount & boot.md
+++ b/Xavier_setting/1. SSD mount & boot.md
@@ -24,9 +24,9 @@ Power off the Xavier and open the board.
 ### 5. Copy rootfs from SD card to SSD ; SSD mount
 
 ```
-~$ git clone https://github.com/jetsonhacks/rootOnNVMe.git 
-~$ cd rootOnNVMe
-~$ ./copy-rootfs-ssd.sh
+$ git clone https://github.com/jetsonhacks/rootOnNVMe.git 
+$ cd rootOnNVMe
+$ ./copy-rootfs-ssd.sh
 ```
 + Mount ? 하드디스크나 어떤 특정한 장치를 인식하게 하는 것으로 즉, 여기서는 SD카드 마운트 해제, SSD카드 마운트 
 
